--- a/index.html
+++ b/index.html
@@ -3,64 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TechClass
 </head>
-<body style="background-color:powderblue">
-    <h1 style="background-color: powderblue;">This is heading 1</h1>
-<p style="background-color: tomato;">This is some text.</p>
-<hr>
-<h2 style="color: blue;">This is heading 2</h2>
-<p>This is some other text.</p>
-<hr>
-<p style="color: red;">This is<br>a paragraph<br>with line breaks.</p>
-<p>
-    My Bonnie lies over the ocean.
-
-  My Bonnie lies over the sea.
-
-  My Bonnie lies over the ocean.
-
-  Oh, bring back my Bonnie to me.
-</p>
-<pre>My Bonnie lies over the ocean.
-
-    My Bonnie lies over the sea.
-  
-    My Bonnie lies over the ocean.
-  
-    Oh, bring back my Bonnie to me.
-</pre>
-<b>This text is bold</b><br>
-<strong>This Boldened text is important</strong><br>
-<em>Use em instead of bold tags</em><br>
-<small>This text is small</small>
-<p>Make sure you <mark>follow up</mark> with this bootcamp</p>
+<body>
+    <h1>This is My first Heading</h1>
+    <p>This is my first HTML paragraph</p>
+    <p><i>This Paragraph is italicised</i></p>
+    <p><em>This Paragraph is emphasized</em></p>
+    <p>The chemical formular for <strong><q>Water</q></strong>is H<sub>2</sub>O</p>
+<table>
+    <tr>
+        <th>Victor</th>
+        <th>Josephine</th>
+        <th>Gideon</th>
+    </tr>
+    <tr>
+        <td>Personal Assistant</td>
+        <td>Colourist</td>
+        <td>Stylist</td>
+    </tr>
+</table>
 </body>
-<p>My first programming language was <del>C, by ALX Africa</del></p>
-<p>My favorite color is <del>blue</del> <ins>red</ins>.</p>
-<p>Example of block quote</p>
-<blockquote>HTML qoutes</blockquote>
-<p>The block quote and short quotes are the <q>different types of html quotes</q></p>
-<p><abbr title="Smart Money Concepts">SMC</abbr> is my brand name</p>
-<address>Written by John Doe.<br>
-    Visit us at:<br>
-    Example.com<br>
-    Box 564, Disneyland<br>
-    USA</address>
-<p>Hello, <abbr title="Smart Money Concepts">SMC is a concept from The Inner Cycle Trader</abbr></p>
-<!--This is a comment-->
-<P style="border: 10 orange;">Only this paragraph will be displayed by the browser</P>
-<a href="https//:www.tradingview.com" title="Visit our website">Click here</a>
-<p><a href="#C3">Jump to Chapter 3</a></p>
-<p><a href="#C5">Jump to Chapter 5</a></p>
-<h1>chapter 1</h1>
-<p>Ths chapter discuses rubbish</p>
-<h2>chapter 2</h2>
-<p>Ths chapter discuses rubbish</p>
-<h2 id="C4">chapter 3</h2>
-<p>Ths chapter discuses rubbish</p>
-<h2>chapter 4</h2>
-<p>Ths chapter discuses rubbish</p>
-<h2 id="C5">Chapter 5</h2>
-<p>Ths chapter discuses rubbish</p>
 </html>
