updated README.md,index.html now has lists and table

--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechClass
+    <title>TechClass</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>This is My first Heading</h1>
     <p>This is my first HTML paragraph</p>
     <p><i>This Paragraph is italicised</i></p>
     <p><em>This Paragraph is emphasized</em></p>
-    <p>The chemical formular for <strong><q>Water</q></strong>is H<sub>2</sub>O</p>
+    <p>The chemical formular for <strong><q>Water</q></strong> is H<sub>2</sub>O.</p>
 <table>
     <tr>
         <th>Victor</th>
@@ -22,6 +27,23 @@
         <td>Colourist</td>
         <td>Stylist</td>
     </tr>
+    <tr>
+        <td>Old Staff</td>
+        <td>Old Staff</td>
+        <td>New Staff</td>
+    </tr>
 </table>
+<ul>
+    <li>Victor</li>
+    <li>Josephine</li>
+    <li>Precious</li>
+    <li>Oliver</li>
+</ul>
+<ol style="list-style-type: circle;">
+    <li>Orange</li>
+    <li>Pineapple</li>
+    <li>Juice</li>
+    <li>Mango</li>
+</ol>
 </body>
 </html>
